# ANNwork

SIMD/: flat_scan.h  flat_scan_auto.h  flat_scan_neon.h  flat_scan_pq.h  flat_scan_pq_adc_neon.h  flat_scan_pq_blocked_soa.h  flat_scan_pq_kmeans_neon.h  flat_scan_strategies.h  flat_scan_x86.h
ann2-push/: build_cross_platform_assets.py  build_report_assets.py  collect_batch_scale.sh  collect_report_data.sh  collect_thread_sweep.sh  collect_tradeoff_sweep.sh  hnsw_mt.h  run_bench.sh
ann_x86_win_full/: CMakeLists.txt  build_mingw.bat  build_msvc.bat  collect_compare_results.ps1  collect_report_extra.ps1  common.h  distance_x86.h  flat_x86.h  hnsw_x86.h  ivf_x86.h  main_x86_win.cc  pq_x86.h  rerun_hnsw_simd_results.ps1
gpu_experiment_clean_code/: ann_bench_utils.h  build_gpu.sh  collect_gpu_report_data.sh  gpu_ann.cu  gpu_ann.h  gpu_main.cu  ivf.h  qsub_gpu.sh
task2_server_arm/: flat_scan_mt.h  flat_scan_pq.h  flat_scan_pq_blocked_soa.h  flat_scan_pq_kmeans_neon.h  flat_scan_prefetch.h  flat_scan_sq.h  ivf.h  ivf_hnsw.h  ivf_mt.h  ivf_neon.h  ivf_pq.h  strict_search_wrappers.h
task2_server_arm/hnswlib/hnswlib/: hnswlib.h
task3_mpi_server_arm/: hybrid_graph_mt.h  mpi_ann_bench.cc  strict_mpi_wrappers.h
